# server

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  README.md  install.txt  settings.ini
Einsatz/: CMakeLists.txt  Echo_Observer.cpp  Emergencies_Observer.cpp  Emergency.h  EmergencyFactory.cpp  EmergencyFactory.h  Observer.h  Patient.cpp  Patient.h  Server_Observer.cpp  User_Observer.cpp  Vehicle_Observer.cpp  main.cpp
Fahrzeug/: Abstract_Vehicle.cpp  Abstract_Vehicle.h  CMakeLists.txt  Database.cpp  Database.h  Echo_Observer.cpp  Emergencies_Observer.cpp  Hospital.cpp  Hospital.h  Observer.h  Position.cpp  Position.h  Route.cpp  Route.h  Server_Observer.cpp  TimeTable.cpp  TimeTable.h  Vehicle_Amb.cpp  Vehicle_Amb.h  Vehicle_Observer.cpp  Vehicle_Status.cpp  Vehicle_Status.h  main.cpp  main.h
Sync/: CMakeLists.txt  Echo_Observer.cpp  Emergencies_Observer.cpp  Observer.h  Server_Observer.cpp  User_Observer.cpp  Vehicle_Observer.cpp  main.cpp
com/: CMakeLists.txt
com/src/: CMakeLists.txt
com/src/com_cli/: CLI.cpp  CLI.h
com/src/com_client/: Client.cpp  Client.h  Client_Interface.cpp  Client_Interface.h
com/src/com_config/: config.cpp  config.h  ini_reader.cpp  ini_reader.h
com/src/com_convert/: convert.cpp  convert.h
com/src/com_http_client/: Http_Client.cpp  Http_Client.h
com/src/com_log/: Log.cpp  Log.h
com/src/com_package/: Package.h  Package_Converter.cpp  Package_Converter.h  Package_Emergencies.h  Package_Server.h  Package_User.h  Package_Vehicle.h
com/src/com_server/: CMakeLists.txt  Client.cpp  Client.h  Client_Connection.cpp  Client_Connection.h  Server.cpp  Server.h  Server_Interface.cpp  Server_Interface.h
com/src/com_shared/: Singleton.templ  Thread_Save_Queue.templ
com/src/com_sql_client/: CppSQLite3.cpp  CppSQLite3.h  MySQL_Client.cpp  MySQL_Client.h  SQL_Client.cpp  SQL_Client.h  SQLite_Client.cpp  SQLite_Client.h
com/src/com_task_scheduler/: CMakeLists.txt  Task_Scheduler.cpp  Task_Scheduler.h
com/test/: CMakeLists.txt
com/test/com_cli_test/: CMakeLists.txt  main.cpp
com/test/com_client_test/: CMakeLists.txt  client_cmds.h  from_client_cmds.h  from_server_cmds.h  main.cpp
com/test/com_config_test/: CMakeLists.txt  main.cpp  test.ini
com/test/com_convert_test/: CMakeLists.txt  main.cpp
com/test/com_server_test/: CMakeLists.txt  main.cpp
com/test/com_sql_test/: CMakeLists.txt  main.cpp
com/test/com_task_scheduler_test/: CMakeLists.txt  main.cpp
database/: new_ilssim.sql  new_ilssim.sqlite  online_ilssim.sql  online_ilssim.sqlite
doc/: online_ilssim.mwb
python_stuff/: client.py  server.py
scripts/: build_server.sh  clean_server.sh  do_cppcheck.sh  install_cppcheck.sh
test_scripte/: emerg01_user1.txt
test_scripte/emerg01/: 01_create_emergency.txt  02_accept_call.txt  03_vehicle_alarm.txt  04_end.txt  run.txt
test_scripte/login/: einsatzserver.txt  fahrzeugserver.txt  testuser0.txt  testuser1.txt
