CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(ILS-Sim-Server)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

SET(CMAKE_INCLUDE_PATH ${CMAKE_INCLUDE_PATH} "C:/boost_1_57_0")
SET(CMAKE_INCLUDE_PATH ${CMAKE_INCLUDE_PATH} "D:/boost_1_54_0")


INCLUDE_DIRECTORIES(protocol/cpp_include)
INCLUDE_DIRECTORIES(protocol/cpp_out)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/com/src)

FIND_PACKAGE(Boost)
IF (Boost_FOUND)
	INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
	LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
ENDIF()
FIND_PACKAGE(Threads)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
LINK_DIRECTORIES(/usr/local/lib/)
LINK_DIRECTORIES($HOME/protobuf/lib/)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror")

ADD_SUBDIRECTORY(com)
ADD_SUBDIRECTORY(Sync)
ADD_SUBDIRECTORY(Fahrzeug)
ADD_SUBDIRECTORY(Einsatz)
